[project]
name = "tag_query"
version = "1.1.2"
description = "A Python package for robust querying of string lists in MongoDB."
authors = [
	{ name = "Zachary Westerman", email = "westerman.zachary@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/ZacharyWesterman/tag_query"
Issues = "https://github.com/ZacharyWesterman/tag_query/issues"
